--- a/KingLayout.layout.latte
+++ b/KingLayout.layout.latte
@@ -4,6 +4,211 @@ RightButton;NoModifier=org.kde.latte.contextmenu
 [Containments][12]
 activityId=
 byPassWM=false
+enableKWinEdges=true
+formfactor=2
+immutability=1
+isPreferredForShortcuts=false
+lastScreen=13
+layoutId=
+location=3
+onPrimary=true
+plugin=org.kde.latte.containment
+raiseOnActivityChange=false
+raiseOnDesktopChange=false
+settingsComplexity=4
+timerHide=700
+timerShow=0
+viewType=1
+visibility=0
+wallpaperplugin=org.kde.image
+
+[Containments][12][Applets][40]
+immutability=1
+plugin=fokus
+
+[Containments][12][Applets][40][Configuration]
+PreloadWeight=54
+
+[Containments][12][Applets][41]
+immutability=1
+plugin=org.kde.plasma.kicker
+
+[Containments][12][Applets][41][Configuration]
+PreloadWeight=84
+
+[Containments][12][Applets][41][Configuration][ConfigDialog]
+DialogHeight=660
+DialogWidth=880
+
+[Containments][12][Applets][41][Configuration][General]
+customButtonImage=manjaro
+favoriteSystemActions=logout
+favoritesPortedToKAstats=true
+useCustomButtonImage=true
+
+[Containments][12][Applets][41][Shortcuts]
+global=Alt+F1
+
+[Containments][12][Applets][42]
+immutability=1
+plugin=org.kde.windowbuttons
+
+[Containments][12][Applets][42][Configuration]
+PreloadWeight=44
+
+[Containments][12][Applets][42][Configuration][ConfigDialog]
+DialogHeight=682
+DialogWidth=880
+
+[Containments][12][Applets][42][Configuration][General]
+buttonSizePercentage=70
+buttons=5|3|4|10|2|9
+containmentType=Latte
+lengthFirstMargin=4
+lengthLastMargin=1
+selectedPlugin=org.kde.kwin.aurorae
+selectedTheme=__aurorae__svg__Sweet-Dark-transparent
+useCurrentDecoration=false
+visibility=ActiveMaximizedWindow
+
+[Containments][12][Applets][43]
+immutability=1
+plugin=org.kde.plasma.digitalclock
+
+[Containments][12][Applets][43][Configuration]
+PreloadWeight=84
+
+[Containments][12][Applets][44]
+immutability=1
+plugin=org.kde.windowtitle
+
+[Containments][12][Applets][44][Configuration]
+PreloadWeight=39
+
+[Containments][12][Applets][44][Configuration][ConfigDialog]
+DialogHeight=660
+DialogWidth=880
+
+[Containments][12][Applets][44][Configuration][General]
+containmentType=Latte
+lengthFirstMargin=4
+lengthLastMargin=1
+
+[Containments][12][Applets][45]
+immutability=1
+plugin=org.kde.plasma.appmenu
+
+[Containments][12][Applets][45][Configuration]
+PreloadWeight=34
+
+[Containments][12][Applets][46]
+immutability=1
+plugin=org.kde.plasma.pager
+
+[Containments][12][Applets][46][Configuration]
+PreloadWeight=34
+
+[Containments][12][Applets][46][Configuration][ConfigDialog]
+DialogHeight=660
+DialogWidth=880
+
+[Containments][12][Applets][47]
+immutability=1
+plugin=org.kde.plasma.showdesktop
+
+[Containments][12][Applets][47][Configuration]
+PreloadWeight=34
+
+[Containments][12][Applets][48]
+immutability=1
+plugin=org.kde.plasma.systemtray
+
+[Containments][12][Applets][48][Configuration]
+PreloadWeight=84
+SystrayContainmentId=15
+
+[Containments][12][Applets][49]
+immutability=1
+plugin=org.kde.plasma.systemmonitor
+
+[Containments][12][Applets][49][Configuration]
+PreloadWeight=34
+
+[Containments][12][Applets][49][Configuration][Appearance]
+chartFace=org.kde.ksysguard.linechart
+title=Network speed
+
+[Containments][12][Applets][49][Configuration][ConfigDialog]
+DialogHeight=660
+DialogWidth=880
+
+[Containments][12][Applets][49][Configuration][General]
+sources=network%2Finterfaces%2Fwlp2s0%2Ftransmitter%2Fdata
+
+[Containments][12][Applets][49][Configuration][SensorColors]
+network/all/download=86,87,245
+network/all/receivedDataRate=86,87,245
+network/all/sentDataRate=245,244,86
+network/all/upload=245,244,86
+
+[Containments][12][Applets][49][Configuration][Sensors]
+highPrioritySensorIds=["network/all/download","network/all/upload"]
+
+[Containments][12][Applets][50]
+immutability=1
+plugin=org.kde.plasma.nightcolorcontrol
+
+[Containments][12][Applets][50][Configuration]
+PreloadWeight=34
+
+[Containments][12][ConfigDialog]
+DialogHeight=807
+DialogWidth=659
+
+[Containments][12][Configuration]
+PreloadWeight=34
+
+[Containments][12][General]
+alignment=10
+alignmentUpgraded=true
+animationLauncherBouncing=false
+animationWindowAddedInGroup=false
+animationWindowInAttention=false
+appletOrder=41;42;44;45;43;49;46;50;47;40;48
+appletShadowsEnabled=false
+autoSizeEnabled=false
+dragActiveWindowEnabled=true
+fittsLawIsRequested=false
+floatingInternalGapIsForced=false
+hideFloatingGapForMaximized=true
+hideScreenGapForMaximized=true
+iconSize=35
+inConfigureAppletsMode=true
+maxLength=90
+panelSize=100
+panelTransparency=25
+plasmaBackgroundForPopups=true
+screenEdgeMargin=60
+shadowSize=25
+shadows=None
+shadowsUpgraded=true
+solidBackgroundForMaximized=true
+splitterPosition=5
+splitterPosition2=7
+taskScrollAction=ScrollNone
+tasksUpgraded=true
+thickMargin=10
+titleTooltips=false
+zoomLevel=0
+
+[Containments][12][Indicator]
+customType=
+enabled=true
+type=org.kde.latte.default
+
+[Containments][14]
+activityId=
+byPassWM=false
 dockWindowBehavior=true
 enableKWinEdges=true
 formfactor=2
@@ -23,46 +228,47 @@ viewType=0
 visibility=3
 wallpaperplugin=org.kde.image
 
-[Containments][12][Applets][40]
+[Containments][14][Applets][51]
+immutability=1
+plugin=org.kde.plasma.analogclock
+
+[Containments][14][Applets][51][Configuration]
+PreloadWeight=38
+
+[Containments][14][Applets][54]
+immutability=1
+plugin=org.kde.plasma.kickerdash
+
+[Containments][14][Applets][54][Configuration]
+PreloadWeight=84
+
+[Containments][14][Applets][54][Configuration][General]
+favoriteSystemActions=logout
+favoritesPortedToKAstats=true
+
+[Containments][14][Applets][55]
 immutability=1
 plugin=org.kde.latte.plasmoid
 
-[Containments][12][Applets][40][Configuration]
-PreloadWeight=34
+[Containments][14][Applets][55][Configuration]
+PreloadWeight=18
 
-[Containments][12][Applets][40][Configuration][General]
+[Containments][14][Applets][55][Configuration][General]
 isInLatteDock=true
 launchers59=applications:systemsettings.desktop,applications:org.kde.dolphin.desktop,applications:firefox.desktop,applications:chromium.desktop,applications:android-studio-beta.desktop,applications:org.kde.konsole.desktop,applications:visual-studio-code.desktop,applications:org.qt-project.qtcreator.desktop
 taskScrollAction=ScrollNone
 
-[Containments][12][Applets][41]
-immutability=1
-plugin=org.kde.plasma.kickerdash
-
-[Containments][12][Applets][41][Configuration]
-PreloadWeight=100
-
-[Containments][12][Applets][41][Configuration][General]
-favoritesPortedToKAstats=true
-
-[Containments][12][Applets][42]
-immutability=1
-plugin=org.kde.plasma.analogclock
-
-[Containments][12][Applets][42][Configuration]
-PreloadWeight=54
-
-[Containments][12][ConfigDialog]
+[Containments][14][ConfigDialog]
 DialogHeight=800
 DialogWidth=690
 
-[Containments][12][Configuration]
-PreloadWeight=34
+[Containments][14][Configuration]
+PreloadWeight=18
 
-[Containments][12][General]
+[Containments][14][General]
 advanced=false
 alignmentUpgraded=true
-appletOrder=41;40;42
+appletOrder=54;55;51
 panelSize=5
 panelTransparency=10
 shadowOpacity=60
@@ -75,196 +281,16 @@ taskScrollAction=ScrollNone
 tasksUpgraded=true
 zoomLevel=16
 
-[Containments][12][Indicator]
+[Containments][14][Indicator]
 customType=
 enabled=true
 type=org.kde.latte.default
 
-[Containments][12][Indicator][org.kde.latte.default][General]
+[Containments][14][Indicator][org.kde.latte.default][General]
 activeStyle=Dot
 
-[Containments][13]
-activityId=
-byPassWM=false
-enableKWinEdges=true
-formfactor=2
-immutability=1
-isPreferredForShortcuts=false
-lastScreen=13
-layoutId=
-location=3
-onPrimary=true
-plugin=org.kde.latte.containment
-raiseOnActivityChange=false
-raiseOnDesktopChange=false
-settingsComplexity=4
-timerHide=700
-timerShow=0
-viewType=1
-visibility=0
-wallpaperplugin=org.kde.image
-
-[Containments][13][Applets][43]
-immutability=1
-plugin=org.kde.windowtitle
-
-[Containments][13][Applets][43][Configuration]
-PreloadWeight=55
-
-[Containments][13][Applets][43][Configuration][ConfigDialog]
-DialogHeight=660
-DialogWidth=880
-
-[Containments][13][Applets][43][Configuration][General]
-containmentType=Latte
-lengthFirstMargin=4
-lengthLastMargin=1
-
-[Containments][13][Applets][44]
-immutability=1
-plugin=org.kde.plasma.pager
-
-[Containments][13][Applets][44][Configuration][ConfigDialog]
-DialogHeight=660
-DialogWidth=880
-
-[Containments][13][Applets][45]
-immutability=1
-plugin=org.kde.plasma.systemtray
-
-[Containments][13][Applets][45][Configuration]
-PreloadWeight=100
-SystrayContainmentId=14
-
-[Containments][13][Applets][46]
-immutability=1
-plugin=org.kde.plasma.systemmonitor
-
-[Containments][13][Applets][46][Configuration][Appearance]
-chartFace=org.kde.ksysguard.linechart
-title=Network speed
-
-[Containments][13][Applets][46][Configuration][ConfigDialog]
-DialogHeight=660
-DialogWidth=880
-
-[Containments][13][Applets][46][Configuration][General]
-sources=network%2Finterfaces%2Fwlp2s0%2Ftransmitter%2Fdata
-
-[Containments][13][Applets][46][Configuration][SensorColors]
-network/all/receivedDataRate=86,87,245
-network/all/sentDataRate=245,244,86
-
-[Containments][13][Applets][46][Configuration][Sensors]
-highPrioritySensorIds=["network/all/receivedDataRate","network/all/sentDataRate"]
-
-[Containments][13][Applets][47]
-immutability=1
-plugin=org.kde.windowbuttons
-
-[Containments][13][Applets][47][Configuration]
-PreloadWeight=60
-
-[Containments][13][Applets][47][Configuration][ConfigDialog]
-DialogHeight=682
-DialogWidth=880
-
-[Containments][13][Applets][47][Configuration][General]
-buttonSizePercentage=70
-buttons=5|3|4|10|2|9
-containmentType=Latte
-lengthFirstMargin=4
-lengthLastMargin=1
-selectedPlugin=org.kde.kwin.aurorae
-selectedTheme=__aurorae__svg__Sweet-Dark-transparent
-useCurrentDecoration=false
-visibility=ActiveMaximizedWindow
-
-[Containments][13][Applets][48]
-immutability=1
-plugin=fokus
-
-[Containments][13][Applets][48][Configuration]
-PreloadWeight=70
-
-[Containments][13][Applets][49]
-immutability=1
-plugin=org.kde.plasma.appmenu
-
-[Containments][13][Applets][50]
-immutability=1
-plugin=org.kde.plasma.digitalclock
-
-[Containments][13][Applets][50][Configuration]
-PreloadWeight=100
-
-[Containments][13][Applets][51]
-immutability=1
-plugin=org.kde.plasma.showdesktop
-
-[Containments][13][Applets][52]
-immutability=1
-plugin=org.kde.plasma.kicker
-
-[Containments][13][Applets][52][Configuration]
-PreloadWeight=100
-
-[Containments][13][Applets][52][Configuration][ConfigDialog]
-DialogHeight=660
-DialogWidth=880
-
-[Containments][13][Applets][52][Configuration][General]
-customButtonImage=manjaro
-favoritesPortedToKAstats=true
-useCustomButtonImage=true
-
-[Containments][13][Applets][52][Shortcuts]
-global=Alt+F1
-
-[Containments][13][Applets][53]
-immutability=1
-plugin=org.kde.plasma.nightcolorcontrol
-
-[Containments][13][ConfigDialog]
-DialogHeight=807
-DialogWidth=659
-
-[Containments][13][General]
-alignment=10
-alignmentUpgraded=true
-animationLauncherBouncing=false
-animationWindowAddedInGroup=false
-animationWindowInAttention=false
-appletOrder=52;47;43;49;50;46;44;53;51;48;45
-appletShadowsEnabled=false
-dragActiveWindowEnabled=true
-fittsLawIsRequested=false
-hideScreenGapForMaximized=true
-iconSize=35
-inConfigureAppletsMode=true
-maxLength=90
-panelSize=100
-panelTransparency=25
-plasmaBackgroundForPopups=true
-screenEdgeMargin=60
-shadowSize=25
-shadows=None
-shadowsUpgraded=true
-solidBackgroundForMaximized=true
-splitterPosition=4
-splitterPosition2=6
-taskScrollAction=ScrollNone
-tasksUpgraded=true
-thickMargin=10
-titleTooltips=false
-zoomLevel=0
-
-[Containments][13][Indicator]
-customType=
-enabled=true
-type=org.kde.latte.default
-
-[Containments][14]
+[Containments][15]
+PreloadWeight=34
 activityId=
 formfactor=2
 immutability=1
@@ -274,85 +300,90 @@ location=3
 plugin=org.kde.plasma.private.systemtray
 wallpaperplugin=org.kde.image
 
-[Containments][14][Applets][54]
-immutability=1
-plugin=org.kde.plasma.volume
-
-[Containments][14][Applets][54][Configuration]
-PreloadWeight=100
-
-[Containments][14][Applets][54][Configuration][ConfigDialog]
-DialogHeight=660
-DialogWidth=880
-
-[Containments][14][Applets][55]
+[Containments][15][Applets][56]
 immutability=1
 plugin=org.kde.plasma.printmanager
 
-[Containments][14][Applets][56]
-immutability=1
-plugin=org.kde.plasma.mediacontroller
+[Containments][15][Applets][56][Configuration]
+PreloadWeight=34
 
-[Containments][14][Applets][56][Configuration]
-PreloadWeight=0
-
-[Containments][14][Applets][57]
-immutability=1
-plugin=org.kde.plasma.keyboardindicator
-
-[Containments][14][Applets][58]
-immutability=1
-plugin=org.kde.plasma.clipboard
-
-[Containments][14][Applets][58][Configuration]
-PreloadWeight=100
-
-[Containments][14][Applets][59]
-immutability=1
-plugin=org.kde.kdeconnect
-
-[Containments][14][Applets][60]
-immutability=1
-plugin=org.kde.plasma.devicenotifier
-
-[Containments][14][Applets][60][Configuration]
-PreloadWeight=100
-
-[Containments][14][Applets][61]
+[Containments][15][Applets][57]
 immutability=1
 plugin=org.kde.plasma.bluetooth
 
-[Containments][14][Applets][61][Configuration]
-PreloadWeight=100
+[Containments][15][Applets][57][Configuration]
+PreloadWeight=84
 
-[Containments][14][Applets][62]
+[Containments][15][Applets][58]
+immutability=1
+plugin=org.kde.plasma.clipboard
+
+[Containments][15][Applets][58][Configuration]
+PreloadWeight=84
+
+[Containments][15][Applets][59]
+immutability=1
+plugin=org.kde.plasma.keyboardindicator
+
+[Containments][15][Applets][59][Configuration]
+PreloadWeight=34
+
+[Containments][15][Applets][60]
+immutability=1
+plugin=org.kde.plasma.devicenotifier
+
+[Containments][15][Applets][60][Configuration]
+PreloadWeight=84
+
+[Containments][15][Applets][61]
 immutability=1
 plugin=org.kde.plasma.notifications
 
-[Containments][14][Applets][62][Configuration]
-PreloadWeight=75
+[Containments][15][Applets][61][Configuration]
+PreloadWeight=59
 
-[Containments][14][Applets][63]
-immutability=1
-plugin=org.kde.plasma.nightcolorcontrol
-
-[Containments][14][Applets][64]
+[Containments][15][Applets][62]
 immutability=1
 plugin=org.kde.plasma.networkmanagement
 
-[Containments][14][Applets][64][Configuration]
-PreloadWeight=100
+[Containments][15][Applets][62][Configuration]
+PreloadWeight=84
 
-[Containments][14][Applets][65]
+[Containments][15][Applets][63]
+immutability=1
+plugin=org.kde.plasma.volume
+
+[Containments][15][Applets][63][Configuration]
+PreloadWeight=84
+
+[Containments][15][Applets][63][Configuration][ConfigDialog]
+DialogHeight=660
+DialogWidth=880
+
+[Containments][15][Applets][64]
+immutability=1
+plugin=org.kde.plasma.nightcolorcontrol
+
+[Containments][15][Applets][64][Configuration]
+PreloadWeight=34
+
+[Containments][15][Applets][66]
+immutability=1
+plugin=org.kde.kdeconnect
+
+[Containments][15][Applets][66][Configuration]
+PreloadWeight=34
+
+[Containments][15][Applets][67]
 immutability=1
 plugin=org.kde.plasma.battery
 
-[Containments][14][Applets][65][Configuration]
-PreloadWeight=2
+[Containments][15][Applets][67][Configuration]
+PreloadWeight=0
 
-[Containments][14][General]
-extraItems=org.kde.plasma.clipboard,org.kde.plasma.printmanager,org.kde.plasma.keyboardindicator,org.kde.plasma.bluetooth,org.kde.plasma.networkmanagement,org.kde.plasma.mediacontroller,org.kde.plasma.volume,org.kde.plasma.battery,org.kde.plasma.devicenotifier,org.kde.kdeconnect,org.kde.plasma.nightcolorcontrol,org.kde.plasma.notifications
-knownItems=org.kde.plasma.clipboard,org.kde.plasma.printmanager,org.kde.plasma.keyboardindicator,org.kde.plasma.bluetooth,org.kde.plasma.networkmanagement,org.kde.plasma.mediacontroller,org.kde.plasma.volume,org.kde.plasma.battery,org.kde.plasma.devicenotifier,org.kde.kdeconnect,org.kde.plasma.nightcolorcontrol,org.kde.plasma.notifications
+[Containments][15][General]
+extraItems=org.kde.plasma.clipboard,org.kde.plasma.printmanager,org.kde.plasma.keyboardindicator,org.kde.plasma.bluetooth,org.kde.plasma.networkmanagement,org.kde.plasma.mediacontroller,org.kde.plasma.volume,org.kde.plasma.battery,org.kde.plasma.devicenotifier,org.kde.kdeconnect,org.kde.plasma.nightcolorcontrol,org.kde.plasma.notifications,org.kde.plasma.keyboardlayout
+knownItems=org.kde.plasma.clipboard,org.kde.plasma.printmanager,org.kde.plasma.keyboardindicator,org.kde.plasma.bluetooth,org.kde.plasma.networkmanagement,org.kde.plasma.mediacontroller,org.kde.plasma.volume,org.kde.plasma.battery,org.kde.plasma.devicenotifier,org.kde.kdeconnect,org.kde.plasma.nightcolorcontrol,org.kde.plasma.notifications,org.kde.plasma.keyboardlayout
 
 [LayoutSettings]
 activities=
@@ -361,6 +392,7 @@ color=blue
 customBackground=
 customTextColor=fcfcfc
 disableBordersForMaximizedWindows=true
+icon=
 lastUsedActivity=
 launchers=
 preferredForShortcutsTouched=false
